# GC9A01A-RPI

./: CMakeLists.txt  README.md
examples/: gif-example.cpp
lib/: GC9A01A_rpi.cpp  GC9A01A_rpi.h  GPIOConfig.cpp  GPIOConfig.h
src/: main.cpp
